<resources>
    <string name="app_name">如意商户版</string>
    <string name="pleaseInputPhone">请输入手机号</string>
    <string name="inputPassword">请输入密码</string>
    <string name="login">登录</string>
    <string name="main">首页</string>
    <string name="mine">"我的"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="netError">网络连接失败</string>
    <string name="test">111</string>
    <string name="phoneTest">1111111111</string>
    <string name="loginHint">登录享受更精彩</string>
    <string name="phone">手机号</string>
    <string name="passWord">密码</string>
    <string name="pleaseInputPassword">请输入密码</string>
    <string name="vipList">会员列表</string>

    <string name="order_detailMessage">会员概况</string>
    <string name="orderDetail">会员详情</string>
    <string name="orderNumber">手机号</string>
    <string name="orderMoney">实名认证状态</string>
    <string name="orderStatus">购买单量</string>
    <string name="message">购买金额</string>
    <string name="payStatus">会员状态</string>
    <string name="testFont">嗷嗷啊啊</string>
    <string name="ordePrice">金额</string>
    <string name="reportRate">回报率</string>
    <string name="orderTime">银行卡绑定状态</string>
    <string name="productName">会员名称</string>
    <string name="sellOrderNum">卖出单量</string>
    <string name="sellOrderMoney">卖出金额</string>
    <string name="income">收益</string>
    <string name="confirm">保存邀请码</string>
</resources>