<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VipDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ab_order_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_money_mangement">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/order_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_25"
            android:minHeight="?attr/actionBarSize"
            android:navigationIcon="@mipmap/ic_back_white"
            app:navigationIcon="@mipmap/ic_back_white"
            tools:targetApi="lollipop">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="true"
                android:text="@string/orderDetail"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_14" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_order_detail_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ab_order_detail"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_28"
        android:text="@string/order_detailMessage"
        android:textColor="@color/alwaysTextColor"
        android:textSize="@dimen/dp_15" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_order_detail_hint"
        android:layout_marginStart="@dimen/dp_17"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="@dimen/dp_17"
        android:background="@drawable/bg_money_product_detail">

        <TextView
            android:id="@+id/tv_vip_phone"
            style="@style/productText"
            android:layout_marginEnd="17dp"
            android:text="@string/testFont"
            app:layout_constraintBottom_toBottomOf="@id/tv_hint_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_hint_name" />

        <TextView
            android:id="@+id/tv_vip_name"
            style="@style/productText"
            android:text="@string/testFont"
            app:layout_constraintBottom_toBottomOf="@id/tv_hint_type"
            app:layout_constraintEnd_toEndOf="@id/tv_vip_phone"
            app:layout_constraintTop_toTopOf="@id/tv_hint_type" />

        <TextView
            android:id="@+id/tv_vip_real"
            style="@style/productText"
            android:text="@string/testFont"
            app:layout_constraintBottom_toBottomOf="@id/tv_hint_risk"
            app:layout_constraintEnd_toEndOf="@id/tv_vip_bank"
            app:layout_constraintTop_toTopOf="@id/tv_hint_risk" />

        <TextView
            android:id="@+id/tv_vip_bank"
            style="@style/productText"
            android:text="@string/testFont"
            app:layout_constraintBottom_toBottomOf="@id/tv_hint_time"
            app:layout_constraintEnd_toEndOf="@id/tv_vip_name"
            app:layout_constraintTop_toTopOf="@id/tv_hint_time" />

        <TextView
            android:id="@+id/tv_vip_buy_num"
            style="@style/productText"
            android:text="@string/testFont"
            app:layout_constraintBottom_toBottomOf="@id/tv_hint_status"
            app:layout_constraintEnd_toEndOf="@id/tv_vip_bank"
            app:layout_constraintTop_toTopOf="@id/tv_hint_status" />

        <TextView
            android:id="@+id/tv_vip_buy_money"
            style="@style/productText"
            android:text="@string/testFont"
            app:layout_constraintBottom_toBottomOf="@id/tv_hint_message"
            app:layout_constraintEnd_toEndOf="@id/tv_vip_bank"
            app:layout_constraintTop_toTopOf="@id/tv_hint_message" />

        <TextView
            android:id="@+id/tv_sell_order_num"
            style="@style/productText"
            android:text="@string/testFont"
            app:layout_constraintBottom_toBottomOf="@id/tv_hint_sell_order_num"
            app:layout_constraintEnd_toEndOf="@id/tv_vip_buy_money"
            app:layout_constraintTop_toTopOf="@id/tv_hint_sell_order_num" />

        <TextView
            android:id="@+id/tv_hint_sell_order_money"
            style="@style/productHint"
            android:layout_marginTop="16dp"
            android:text="@string/sellOrderMoney"
            app:layout_constraintBottom_toTopOf="@+id/tv_hint_income"
            app:layout_constraintStart_toStartOf="@+id/tv_hint_sell_order_num"
            app:layout_constraintTop_toBottomOf="@+id/tv_hint_sell_order_num" />

        <TextView
            android:id="@+id/tv_hint_name"
            style="@style/productHint"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/orderNumber"
            app:layout_constraintBottom_toTopOf="@+id/tv_hint_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_hint_type"
            style="@style/productHint"
            android:layout_marginTop="16dp"
            android:text="@string/productName"
            app:layout_constraintBottom_toTopOf="@+id/tv_hint_time"
            app:layout_constraintStart_toStartOf="@id/tv_hint_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_hint_name" />

        <TextView
            android:id="@+id/tv_hint_time"
            style="@style/productHint"
            android:layout_marginTop="16dp"
            android:text="@string/orderTime"
            app:layout_constraintBottom_toTopOf="@+id/tv_hint_risk"
            app:layout_constraintStart_toStartOf="@id/tv_hint_type"
            app:layout_constraintTop_toBottomOf="@+id/tv_hint_type" />

        <TextView
            android:id="@+id/tv_hint_risk"
            style="@style/productHint"
            android:layout_marginTop="16dp"
            android:text="@string/orderMoney"
            app:layout_constraintBottom_toTopOf="@+id/tv_hint_status"
            app:layout_constraintStart_toStartOf="@id/tv_hint_time"
            app:layout_constraintTop_toBottomOf="@+id/tv_hint_time" />

        <TextView
            android:id="@+id/tv_hint_status"
            style="@style/productHint"
            android:layout_marginTop="16dp"
            android:text="@string/orderStatus"
            app:layout_constraintBottom_toTopOf="@+id/tv_hint_message"
            app:layout_constraintStart_toStartOf="@+id/tv_hint_risk"
            app:layout_constraintTop_toBottomOf="@+id/tv_hint_risk" />

        <TextView
            android:id="@+id/tv_hint_message"
            style="@style/productHint"
            android:layout_marginTop="16dp"
            android:text="@string/message"
            app:layout_constraintBottom_toTopOf="@+id/tv_hint_sell_order_num"
            app:layout_constraintStart_toStartOf="@+id/tv_hint_status"
            app:layout_constraintTop_toBottomOf="@+id/tv_hint_status" />

        <TextView
            android:id="@+id/tv_hint_sell_order_num"
            style="@style/productHint"
            android:layout_marginTop="16dp"
            android:text="@string/sellOrderNum"
            app:layout_constraintBottom_toTopOf="@+id/tv_hint_sell_order_money"
            app:layout_constraintStart_toStartOf="@+id/tv_hint_message"
            app:layout_constraintTop_toBottomOf="@+id/tv_hint_message" />

        <TextView
            android:id="@+id/tv_sell_order_money"
            style="@style/productText"
            android:text="@string/testFont"
            app:layout_constraintBottom_toBottomOf="@id/tv_hint_sell_order_money"
            app:layout_constraintEnd_toEndOf="@id/tv_sell_order_num"
            app:layout_constraintTop_toTopOf="@id/tv_hint_sell_order_money" />

        <TextView
            android:id="@+id/tv_hint_income"
            style="@style/productHint"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/income"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_hint_sell_order_money"
            app:layout_constraintTop_toBottomOf="@+id/tv_hint_sell_order_money" />

        <TextView
            android:id="@+id/tv_income"
            style="@style/productText"
            android:text="@string/testFont"
            app:layout_constraintBottom_toBottomOf="@id/tv_hint_income"
            app:layout_constraintEnd_toEndOf="@id/tv_sell_order_money"
            app:layout_constraintTop_toTopOf="@id/tv_hint_income" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>