<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/iv_login_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_210"
        android:background="@mipmap/bg_login">

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_65"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="27dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_login_title"
            android:layout_alignStart="@id/tv_login_title"
            android:layout_marginTop="@dimen/dp_14"
            android:text="@string/loginHint"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_12" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/iv_login_logo"
        android:layout_marginTop="-30dp"
        android:background="@drawable/bg_login">

        <TextView
            android:id="@+id/tv_phone_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_48"
            android:text="@string/phone"
            android:textColor="@color/hintTextColor"
            android:textSize="@dimen/dp_13" />

        <EditText
            android:id="@+id/et_login_username"
            style="@style/loginInputStyle"
            android:layout_below="@id/tv_phone_hint"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_14"
            android:background="@drawable/line_et_bg"
            android:drawableEnd="@mipmap/ic_phone"
            android:hint="@string/pleaseInputPhone"
            android:inputType="phone"
            android:paddingEnd="@dimen/dp_17" />

        <TextView
            android:id="@+id/tv_verify_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_login_username"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_25"
            android:text="@string/passWord"
            android:textColor="@color/hintTextColor"
            android:textSize="@dimen/dp_13" />

        <EditText
            android:id="@+id/et_login_password"
            style="@style/loginInputStyle"
            android:layout_below="@id/tv_verify_hint"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_14"
            android:background="@drawable/line_et_bg"
            android:hint="@string/pleaseInputPassword"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/dp_17" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/et_login_password"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/dp_65"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="@dimen/dp_65"
            android:background="@drawable/bg_them_click"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/whiteBg"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tv_go_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_25"
            android:text="暂无账号，点击注册"
            android:textColor="@color/hintTextColor"
            android:textSize="@dimen/dp_12"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>